# roshambo

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: Game.cc  Game.h  GestureTable.h  Winner.h  main.cc
src/moves/: Move.h  Paper.h  Rock.h  Scissors.h
src/strategies/: GameStrategy.h  RandomStrategy.h
src/util/: Random.h
tests/: CMakeLists.txt  moves_tests.cpp  strategies_test.cpp  util_tests.cpp
